Updates sandbox components to use modular OpenNLP 3.0.0-M1 (#445)
- adapts version in pom files
- adapts towards more fine-grained use of modular OpenNLP components
- adapts classes with missing generic types
- removes use of `new URL(..)`
- bumps snapshot version for next dev iteration