@@ -20,6 +20,8 @@ package opennlp.tools.coref;
 import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -39,7 +41,15 @@ public abstract class AbstractCorefTest {
   protected static final String MODEL_TRAINING_DIR = "/models/training";
 
   protected static void downloadVersion15Model(String modelName) throws IOException {
-    downloadModel(new URL(BASE_URL_MODELS_V15 + modelName));
+    downloadModel(toModelURL(BASE_URL_MODELS_V15 + modelName));
+  }
+
+  private static URL toModelURL(String location) throws IOException {
+    try {
+      return new URI(location).toURL();
+    } catch (URISyntaxException e) {
+      throw new IOException(e);
+    }
   }
 
   private static void downloadModel(URL url) throws IOException {
